--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="md:grid flex flex-col md:grid-cols-2 place-items-center md:mt-10">
             <div data-aos="fade-right" id="Home">
                 <h1 class="aldrich text-white text-4xl md:text-6xl"><span class="text-base_blue">Custom</span>
-                    Development
+                    Software Development
                     <br> and Consulting Services
                 </h1>
                 <p class="aldrich text-base_gray leading-10 mt-3" style="font-size: 20px;">At <span
@@ -255,6 +255,50 @@
                         Advanced Technologies to Enhance
                         Your Website & App.</p>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Our Clients -->
+
+    <div>
+        <div class="headings text-center aldrich text-white" data-aos="fade-up">
+            <h1 class="pb-5 pt-10 text-2xl"> Our Clients</h1>
+            <div>
+                <marquee behavior="scroll">
+                    <div class="flex items-center justify-evenly">
+                        <img src="./Assets/logos/clients/1.jpg" alt="" width="100px" height="100px" class="rounded-full">
+                        <img src="./Assets/logos/clients/2.png" alt="" width="100px" height="100px" class="rounded-full">
+                        <img src="./Assets/logos/clients/3.png" alt="" width="100px" height="100px" class="rounded-full">
+                        <img src="./Assets/logos/clients/4.webp" alt="" width="100px" height="100px" class="rounded-full">
+                    </div>
+                </marquee>
+            </div>
+            <p class="md:p-10 text-base_gray mt-5 mb-5">At TEXSKY, we are proud to have worked with a diverse range of
+                clients, including
+                startups, small businesses, and large organizations. Our clients have trusted us with their web and mobile
+                app needs, and we are grateful for their support.</p>
+        </div>
+        <div class="text-white aldrich text-md grid md:grid-cols-4 gap-5 md:pl-20 pr-20" data-aos="fade-right">
+            <div class=" border-l-2 border-base_blue mb-2 flex flex-col justify-center pl-5" data-aos="fade-right">
+                <h1 class="text-xl">Startups</h1>
+                <p class="text-md text-base_gray">We have worked with startups from idea to launch, ensuring that their
+                    websites and apps are user-friendly and visually appealing.</p>
+            </div>
+            <div class=" border-l-2 border-base_blue mb-2 flex flex-col justify-center pl-5" data-aos="fade-right">
+                <h1 class="text-xl">Small Businesses</h1>
+                <p class="text-md text-base_gray">Our expertise in web and mobile app development allows us to create
+                    websites and apps that meet the unique needs of small businesses.</p>
+            </div>
+            <div class=" border-l-2 border-base_blue mb-2 flex flex-col justify-center pl-5" data-aos="fade-right">
+                <h1 class="text-xl">Large Organizations</h1>
+                <p class="text-md text-base_gray">We have delivered web and mobile apps for large organizations, ensuring
+                    that their applications are secure, scalable, and user-friendly.</p>
+            </div>
+            <div class=" border-l-2 border-base_blue mb-2 flex flex-col justify-center pl-5" data-aos="fade-right">
+                <h1 class="text-xl">Educational Institutions</h1>
+                <p class="text-md text-base_gray">We have worked with educational institutions to develop web and mobile
+                    apps that help students and teachers connect with each other.</p>
             </div>
         </div>
     </div>
