--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div>
         <div class="headings text-center aldrich text-white" data-aos="fade-up">
             <h1 class="pb-5 pt-10 text-2xl"> Our Clients</h1>
-            <div>
+            <!-- <div>
                 <marquee behavior="scroll">
                     <div class="flex items-center justify-evenly">
                         <img src="./Assets/logos/clients/1.jpg" alt="" width="100px" height="100px" class="rounded-full">
@@ -273,7 +273,7 @@
                         <img src="./Assets/logos/clients/4.webp" alt="" width="100px" height="100px" class="rounded-full">
                     </div>
                 </marquee>
-            </div>
+            </div> -->
             <p class="md:p-10 text-base_gray mt-5 mb-5">At TEXSKY, we are proud to have worked with a diverse range of
                 clients, including
                 startups, small businesses, and large organizations. Our clients have trusted us with their web and mobile
